@@ -6,35 +6,18 @@ WORKDIR /build
 COPY . .
 RUN mvn clean package -DskipTests
 
-
 FROM amazoncorretto:17.0.10-alpine3.19@sha256:180e9c91bdbaad3599fedd2f492bf0d0335a9382835aa64669b2c2a8de7c9a22 as builder
-WORKDIR /app
-COPY --from=buildtime /build/target/*.jar /app/application.jar
+COPY --from=buildtime /build/target/*.jar application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
 
 FROM ghcr.io/pagopa/docker-base-springboot-openjdk17:v1.1.3@sha256:a4e970ef05ecf2081424a64707e7c20856bbc40ddb3e99b32a24cd74591817c4
-WORKDIR /app
-COPY --chown=spring:spring  --from=builder /app/dependencies/ ./
-COPY --chown=spring:spring  --from=builder /app/snapshot-dependencies/ ./
-COPY --chown=spring:spring ../applicationinsights-agent.jar /app/applicationinsights-agent.jar
-COPY --chown=spring:spring ../applicationinsights.json /app/applicationinsights.json
-COPY --chown=spring:spring ../docker/run.sh /app/run.sh
+COPY --chown=spring:spring --from=builder dependencies/ ./
+COPY --chown=spring:spring --from=builder snapshot-dependencies/ ./
+RUN true
 # https://github.com/moby/moby/issues/37965#issuecomment-426853382
 RUN true
-COPY --chown=spring:spring  --from=builder /app/spring-boot-loader/ ./
-COPY --chown=spring:spring  --from=builder /app/application/ ./
+COPY --chown=spring:spring --from=builder spring-boot-loader/ ./
+COPY --chown=spring:spring --from=builder application/ ./
 
-
-#ADD --chown=spring:spring https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v1.25.1/opentelemetry-javaagent.jar .
-
-#COPY --chown=spring:spring  --from=builder /app/dependencies/ ./
-#COPY --chown=spring:spring  --from=builder /app/snapshot-dependencies/ ./
-# https://github.com/moby/moby/issues/37965#issuecomment-426853382
-#COPY --chown=spring:spring  --from=builder /app/spring-boot-loader/ ./
-#COPY --chown=spring:spring  --from=builder /app/application/ ./
 
 EXPOSE 8080
-
-ENTRYPOINT ["sh", "run.sh"]
-
-#ENTRYPOINT ["java","-javaagent:opentelemetry-javaagent.jar","--enable-preview","org.springframework.boot.loader.JarLauncher"]
